--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
-    "element-plus": "^1.0.1-alpha.10",
+    "element-plus": "latest",
     "vue": "^3.0.2"
   },
   "devDependencies": {
