--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "element-plus-vite-starter",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build"
   },
   "dependencies": {
     "element-plus": "latest",
-    "vue": "^3.0.2"
+    "vue": "^3.0.5"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.8",
-    "@vue/compiler-sfc": "^3.0.2"
+    "@vitejs/plugin-vue": "^1.0.4",
+    "@vue/compiler-sfc": "^3.0.5",
+    "vite": "^2.0.0-beta.12"
   }
 }
