--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "dependencies": {
     "element-plus": "latest",
-    "vue": "^3.0.5"
+    "vue": "^3.1.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.0.4",
-    "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.0.0-beta.12"
+    "@vitejs/plugin-vue": "^1.2.4",
+    "@vue/compiler-sfc": "^3.1.4",
+    "vite": "^2.4.0"
   }
 }
