--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.6",
+    "typescript": "^4.4.2",
     "vite": "^2.5.3"
-  }
+  },
+  "license": "MIT"
 }
