--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "element-plus": "latest",
-    "vue": "^3.2.6"
+    "element-plus": "1.1.0-beta.16",
+    "vue": "^3.2.14"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.6.0",
-    "@vue/compiler-sfc": "^3.2.6",
-    "typescript": "^4.4.2",
-    "vite": "^2.5.3"
+    "@vitejs/plugin-vue": "^1.9.2",
+    "@vue/compiler-sfc": "^3.2.18",
+    "sass": "^1.42.1",
+    "typescript": "^4.4.3",
+    "vite": "^2.5.10"
   },
   "license": "MIT"
 }
