--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "element-plus-vite-starter",
+  "private": true,
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "element-plus": "^1.2.0-beta.1",
-    "vue": "^3.2.20"
+    "element-plus": "^2.0.2",
+    "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6",
-    "@vitejs/plugin-vue": "^1.9.4",
-    "@vue/compiler-sfc": "^3.2.20",
-    "sass": "^1.43.4",
-    "typescript": "^4.4.4",
-    "unplugin-vue-components": "^0.17.0",
-    "vite": "^2.6.13"
-  },
-  "license": "MIT"
+    "@types/node": "*",
+    "@vitejs/plugin-vue": "^2.2.0",
+    "@vue/compiler-sfc": "^3.2.31",
+    "sass": "^1.49.7",
+    "typescript": "^4.5.5",
+    "unplugin-vue-components": "^0.17.18",
+    "vite": "^2.8.3"
+  }
 }
