--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "sass": "^1.49.7",
     "typescript": "^4.5.5",
     "unplugin-vue-components": "^0.17.18",
-    "vite": "^2.8.3"
+    "vite": "^2.8.3",
+    "vue-tsc": "^0.31.4"
   }
 }
