--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "element-plus": "^2.0.2",
+    "element-plus": "^2.0.5",
     "vue": "^3.2.31"
   },
   "devDependencies": {
-    "@types/node": "*",
-    "@vitejs/plugin-vue": "^2.2.2",
+    "@types/node": "^17.0.21",
+    "@vitejs/plugin-vue": "^2.2.4",
     "@vue/compiler-sfc": "^3.2.31",
-    "sass": "^1.49.8",
-    "typescript": "^4.5.5",
-    "unplugin-vue-components": "^0.17.20",
-    "vite": "^2.8.4",
-    "vue-tsc": "^0.31.4"
-  }
+    "sass": "^1.49.9",
+    "typescript": "^4.6.2",
+    "unplugin-vue-components": "^0.17.21",
+    "vite": "^2.8.6",
+    "vue-tsc": "^0.32.1"
+  },
+  "license": "MIT"
 }
