--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "generate": "vite-ssg build",
+    "preview": "vite preview",
+    "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "element-plus": "^2.1.4",
-    "vue": "^3.2.31"
+    "element-plus": "^2.1.9",
+    "vue": "^3.2.32"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@vitejs/plugin-vue": "^2.2.4",
-    "@vue/compiler-sfc": "^3.2.31",
-    "sass": "^1.49.9",
-    "typescript": "^4.6.2",
-    "unplugin-vue-components": "^0.18.0",
-    "vite": "^2.8.6",
-    "vue-tsc": "^0.33.2-patch.1"
+    "@types/node": "^17.0.23",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "sass": "^1.50.0",
+    "typescript": "^4.6.3",
+    "unplugin-vue-components": "^0.19.2",
+    "vite": "^2.9.1",
+    "vite-ssg": "^0.19.2",
+    "vue-tsc": "^0.34.6"
   },
   "license": "MIT"
 }
