--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "element-plus": "^2.1.9",
-    "vue": "^3.2.32"
+    "element-plus": "^2.1.11",
+    "vue": "^3.2.33"
   },
   "devDependencies": {
-    "@types/node": "^17.0.23",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "sass": "^1.50.0",
-    "typescript": "^4.6.3",
-    "unplugin-vue-components": "^0.19.2",
-    "vite": "^2.9.1",
-    "vite-ssg": "^0.19.2",
-    "vue-tsc": "^0.34.6"
+    "@iconify-json/ep": "^1.1.3",
+    "@types/node": "^17.0.31",
+    "@vitejs/plugin-vue": "^2.3.2",
+    "sass": "^1.51.0",
+    "typescript": "^4.6.4",
+    "unocss": "^0.32.12",
+    "unplugin-vue-components": "^0.19.3",
+    "vite": "^2.9.8",
+    "vite-ssg": "^0.20.0",
+    "vue-tsc": "^0.34.11"
   },
   "license": "MIT"
 }
