--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,11 +16,20 @@ jobs:
         with:
           node-version: "14.x"
 
-      - name: Install Dependencies
-        run: npm install
+      # Cache
+      - name: Cache node modules
+        uses: actions/cache@v2.1.3
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
 
-      - name: Build
-        run: npm run build
+      # dependencies
+      - name: Install dependencies
+        run: yarn install
+
+      # Generate files
+      - name: Generate files
+        run: yarn build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
