--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "element-plus": "^2.6.2",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "^4.4.2"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.1.15",
