--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.3",
     "element-plus": "^2.6.2",
     "vue": "^3.4.21",
