--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^10.11.1",
     "element-plus": "^2.6.2",
     "vue": "^3.4.21"
   },
