--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "element-plus-vite-starter",
   "private": true,
   "version": "0.1.0",
+  "type": "module",
   "packageManager": "pnpm@9.14.2",
   "scripts": {
     "dev": "vite",
@@ -11,20 +12,20 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "element-plus": "^2.6.2",
-    "vue": "^3.4.21"
+    "element-plus": "^2.8.8",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@iconify-json/ep": "^1.1.15",
-    "@types/node": "^20.11.30",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "sass": "^1.72.0",
-    "typescript": "^5.4.3",
-    "unocss": "^0.58.6",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.5",
-    "vite-ssg": "^0.23.6",
-    "vue-tsc": "^2.0.7"
+    "@iconify-json/ep": "^1.2.1",
+    "@types/node": "^20.17.6",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "sass": "^1.81.0",
+    "typescript": "^5.6.3",
+    "unocss": "^0.64.1",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.11",
+    "vite-ssg": "^0.24.1",
+    "vue-tsc": "^2.1.10"
   },
   "license": "MIT"
 }
