--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^10.11.1",
     "element-plus": "^2.8.8",
-    "vue": "^3.5.13"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.2.1",
