--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.0",
   "type": "module",
   "packageManager": "pnpm@9.14.2",
+  "homepage": "https://vite-starter.element-plus.org",
+  "repository": {
+    "url": "https://github.com/element-plus/element-plus-vite-starter"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -20,6 +24,7 @@
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.2.1",
+    "@iconify-json/ri": "^1.2.3",
     "@types/node": "^20.17.6",
     "@vitejs/plugin-vue": "^5.2.0",
     "sass": "^1.81.0",
