feat: support vite-ssg for generate multi htmls, close #77

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,24 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
     "target": "esnext",
+    "jsx": "preserve",
+    "lib": ["esnext", "dom"],
     "useDefineForClassFields": true,
+    "baseUrl": ".",
     "module": "esnext",
     "moduleResolution": "bundler",
-    "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
     "paths": {
       "~/*": ["src/*"]
     },
-    "skipLibCheck": true,
+    "resolveJsonModule": true,
     "types": [
       "vite/client",
       "unplugin-vue-router/client"
-    ]
+    ],
+    "strict": true,
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "vueCompilerOptions": {
     "target": 3
