--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "element-plus-vite-starter",
-  "private": true,
-  "version": "0.1.0",
   "type": "module",
-  "packageManager": "pnpm@9.14.2",
+  "version": "0.1.0",
+  "private": true,
+  "packageManager": "pnpm@9.15.0",
+  "license": "MIT",
   "homepage": "https://vite-starter.element-plus.org",
   "repository": {
     "url": "https://github.com/element-plus/element-plus-vite-starter"
@@ -12,29 +13,33 @@
     "dev": "vite",
     "build": "vite build",
     "generate": "vite-ssg build",
+    "lint": "eslint .",
     "preview": "vite preview",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@vueuse/core": "^11.3.0",
-    "element-plus": "^2.8.8",
+    "@vueuse/core": "^12.0.0",
+    "element-plus": "^2.9.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.11.2",
     "@iconify-json/ep": "^1.2.1",
     "@iconify-json/ri": "^1.2.3",
-    "@types/node": "^20.17.6",
-    "@vitejs/plugin-vue": "^5.2.0",
-    "sass": "^1.81.0",
+    "@types/node": "^20.17.10",
+    "@unocss/eslint-plugin": "^0.65.1",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "eslint": "^9.16.0",
+    "eslint-plugin-format": "^0.1.3",
+    "sass": "^1.82.0",
     "typescript": "^5.6.3",
-    "unocss": "^0.64.1",
-    "unplugin-vue-components": "^0.27.4",
-    "unplugin-vue-router": "^0.10.8",
-    "vite": "^5.4.11",
-    "vite-ssg": "^0.24.1",
+    "unocss": "^0.65.1",
+    "unplugin-vue-components": "^0.27.5",
+    "unplugin-vue-router": "^0.10.9",
+    "vite": "^6.0.3",
+    "vite-ssg": "^0.24.2",
     "vue-tsc": "^2.1.10"
-  },
-  "license": "MIT"
+  }
 }
